# tauri-learn-202210

./: .gitignore  README.md  package.json  pnpm-lock.yaml
go-for-elf/: build.py  go.mod  go.sum  main.go
public/page/: new_window.html  splashscreen.html  splashscreen.vue  window_1.html  window_2.html
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/elf/macos-x64/: elf
src-tauri/icons/: RustDesk.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Greet.vue  InOut.vue  Multiwindow.vue  RunElf.vue  SelectDir.vue  TauriDialog.vue  TauriEvent.vue  TauriFS.vue  TauriFSEvery.vue  TauriHttp.vue  WindowCustomization.vue
