[package]
name = "test5"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "system-tray", "windows7-compat"] }
# 本地依赖
# eframe = { path = "../../crates/eframe" }
# tauri-plugin-fs-extra = { path = "../../../" }
# tauri-plugin-fs-extra = { git="https://github.com/tauri-apps/tauri-plugin-fs-extra", branch="renovate/tauri-monorepo" }
# tauri-plugin-fs-extra = { git="ssh:git@github.com:tauri-apps/tauri-plugin-fs-extra.git", branch="renovate/tauri-monorepo" }
# tauri-plugin-fs-extra = { git="ssh:git@github.com:tauri-apps/tauri-plugin-fs-extra.git", tag="v1.0.0" }
# tauri-plugin-fs-extra = { git="ssh:git@github.com:tauri-apps/tauri-plugin-fs-extra.git", rev = "bfabc843ef2" }
regex = "1.5.4"
rustc-serialize = "0.3.24"
base64 = "0.12.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
split-debuginfo = "unpacked" # faster debug builds on mac

[profile.release]
incremental = false
opt-level = 'z' # 0-3
lto=true
codegen-units = 1
panic = 'abort'
# strip = "debuginfo"
strip = true
